<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/sel_num"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/enterinfo_main"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_sel_num_1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/enterinfo_1"
        android:textSize="@dimen/person_text_size"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:layout_marginEnd="70dp"
        app:layout_constraintStart_toStartOf="@id/sel_num"
        app:layout_constraintTop_toBottomOf="@id/sel_num" />

    <EditText
        android:id="@+id/edit_text_sel_num_2"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="16dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/enterinfo_2"
        android:textSize="@dimen/person_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/edit_text_sel_num_1"
        app:layout_constraintTop_toBottomOf="@id/edit_text_sel_num_1" />


</androidx.constraintlayout.widget.ConstraintLayout>